src/components/layout/layout.module.css
.main {
  display: flex;
  background-color: white;
  color: black;
}

.header{
  opacity: 1;
  min-height: 100px;
  background-color: white;
}

@media screen and (min-width: 1024px) {
  .image {
    top: 0;
    transform: translateY(-100px);
  }
  .main {
    transform: translateY(-100px);
  }
}

.image {
  position: relative;
  width: 100%;
  padding-bottom: 40%;
  z-index: -10;
}

